[tool.poetry]
name = "wenbed"
version = "0.0.0"
description = ""
authors = ["ijknabla <ijknabla@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
wenbed = "wenbed:main"

[tool.poetry.dependencies]
python = ">=3.6"

[tool.poetry.group.dev.dependencies]
black = {version = ">=23", python = ">=3.7"}
isort = {version = "^5", python = ">=3.8"}
mypy = {version = "^1", python = ">=3.7"}
pyproject-flake8 = {version = "^6", python = ">=3.8.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
