[tool.poetry]
name = "wenbed"
version = "0.0.0"
description = ""
authors = ["ijknabla <ijknabla@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
wenbed = "wenbed:main"

[tool.poetry.dependencies]
python = ">=3.7"

[tool.poetry.group.dev.dependencies]
black = {version = ">=23", python = ">=3.7"}
isort = {version = "^5", python = ">=3.8"}
mypy = {version = "^1", python = ">=3.7"}
pyproject-flake8 = {version = "^6", python = ">=3.8.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.flake8]
exclude = '.venv,.git'
max-line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
namespace_packages = true
explicit_package_bases = true
